fix call to action button on firefox

--- a/style/main.less
+++ b/style/main.less
@@ -34,12 +34,16 @@ a {
 		padding: 1em;
 		box-shadow: 1px 1px 0 #7897a9, 2px 2px 0 #7897a9, 3px 3px 0 #7897a9, 4px 4px 0 #7897a9;
 		-webkit-transform: translateY(-4px) translateX(-4px);
+		-moz-transform: translateY(-4px) translateX(-4px);
+		transform: translateY(-4px) translateX(-4px);
 		transition: all .1s;
 
 		&:hover {
 			background: @background;
 			box-shadow: none;
 			-webkit-transform: none;
+			-moz-transform: none;
+			transform: none;
 		}
 
 		&:active {
